--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "express-session": "^1.17.3",
     "mocha": "^10.2.0",
     "nodemon": "^3.0.1",
     "pg-promise": "^11.5.3"
