--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
@@ -36,6 +37,7 @@
     "express-handlebars": "^7.1.2",
     "express-session": "^1.17.3",
     "mocha": "^10.2.0",
+    "nodemailer": "^6.9.4",
     "nodemon": "^3.0.1",
     "pg-promise": "^11.5.3"
   }
